force-app/main/default/objects/New_Product_Entry__e/New_Product_Entry__e.object-meta.xml
<CustomObject>
    <label>New Product Entry</label>
    <pluralLabel>New Product Entries</pluralLabel>
</CustomObject>