force-app/main/default/objects/New_Product_Entry__e/fields/Product_Cateogary__c.field-meta.xml
<CustomField>
    <fullName>Product_Cateogary__c</fullName>
    <label>Product Cateogary</label>
    <length>50</length>
    <type>Text</type>
</CustomField>