force-app/main/default/objects/New_Product_Entry__e/fields/Product_Price__c.field-meta.xml
<CustomField>
    <fullName>Product_Price__c</fullName>
    <label>Product Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>